--- a/spoon-intervals/pom.xml
+++ b/spoon-intervals/pom.xml
@@ -106,7 +106,7 @@
         <repository>
             <id>gforge.inria.fr-snapshot</id>
             <name>Maven Repository for Spoon Snapshot</name>
-            <url>http://maven.inria.fr/artifactory/spoon-public-snapshot/</url>
+            <url>https://maven.inria.fr/artifactory/spoon-public-snapshot/</url>
             <snapshots />
         </repository>
     </repositories>
